# fo4-pickle

./: .gitignore  CMakeLists.txt  README.md  build.bat  clone_to_win.bat
src/: PickleContext.cpp  PickleContext.h  export_manager.cpp  export_manager.h  flag_parser.cpp  flag_parser.h  log_util.cpp  log_util.h  main.cpp  main.h  unpickle_character.cpp  unpickle_character.h  unpickle_companions.cpp  unpickle_companions.h  unpickle_context.h  unpickle_dispatcher.cpp  unpickle_dispatcher.h  unpickle_globals.cpp  unpickle_globals.h  unpickle_map.cpp  unpickle_map.h  unpickle_perks.cpp  unpickle_perks.h  unpickle_quests.cpp  unpickle_quests.h  unpickle_workshops.cpp  unpickle_workshops.h  util.cpp  util.h  write_character.cpp  write_character.h  write_companions.cpp  write_companions.h  write_dispatcher.cpp  write_dispatcher.h  write_globals.cpp  write_globals.h  write_inventory.cpp  write_inventory.h  write_map.cpp  (+9 more)
src/f4se_shims/: CommandTable.cpp  CommandTable.h
